# P7-SMAcc

./: .gitignore  BakPem.pem  JIT.cu  LICENSE  README.md  amount_test_result_GPU.tsv  auto_output.tsv  dicebase.nsys-rep  dockerfile  results_test.tsv  run_full.sh  run_gpu.sh  run_lite.sh  run_server.ps1  someting.ncu-rep  someting2.ncu-rep
dataset/: ball.xml  covidmodel.xml  ex-proba1.xml  genosc.xml  trig.xml
legacy_code/: Edge.h  Guard.h  Node.h  Simulator.cpp  Simulator.h  UniformDistribution.cpp  Update.cpp
legacy_code/Domain/: clock_variable.cu  simulator_state.cu  stochastic_model_t.h  update_t.cu
legacy_code/Simulator/: simulator_tools.h  (+4 more)
src/: Edge.cpp  Edge.h  Node.cpp  Node.h  RelationHandler.cpp  RelationHandler.h  main.cpp
src2/: CMakeLists.txt  Edge.cpp  Edge.h  Guard.cpp  Guard.h  Main.cpp  Node.cpp  Node.cu  Node.h  README.md  RelationHandler.cpp  RelationHandler.h  Simulator.cpp  Simulator.h  Timer.cpp  Timer.h  UniformDistribution.cpp  UniformDistribution.h  Update.cpp  Update.h  dockerfile  requirements.txt  run_full.sh  run_lite.sh  src2.sln  src2.sln.DotSettings  src2.vcxproj  src2.vcxproj.filters  test.xml
src2/Cuda/Projekt/: CMakeLists.txt  CudaSimulator.cu  CudaSimulator.h  common.h  constraint_d.cu  constraint_d.h  cuda_map.cu  cuda_map.h  cuda_simulator.cu  cuda_simulator.h  edge_d.cpp  edge_d.cu  edge_d.h  guard_d.cpp  guard_d.cu  guard_d.h  main.cu  main.h  node_d.cpp  node_d.cu  node_d.h  stochastic_model.cu  stochastic_model.h  timer_d.cpp  timer_d.cu  timer_d.h  uneven_list.cu  uneven_list.h  update_d.cpp  update_d.cu  update_d.h
(+631 files in other folders)
